Added for comma

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button class="btn">3</button>
             <button class="key--operator" id="equal" data-action="calculate">=</button>
             <button class="btn" id="btn-0">0</button>
-            <button class="btn">.</button>
+            <button class="btn" id="btn-dot">.</button>
         </div>
     </main>
 </body>
