Added error message

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
        <div class="calc">
-        <div class="error">This operation is not allowed</div>
+        <div id="error-message">This operation is not allowed</div>
         <div class="calculator__display">
             <div class="display__result">0</div>
         </div>
